--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-Pillow
-streamlit==1.20
-matlplotlib
-seaborn
-re
-pandas
-urlextract
-wordcloud
-collections
-emoji==1.1
-Jinja2==3.1.2
+emoji==2.2.0
+matplotlib==3.6.0
+pandas==1.5.3
+pandas==1.5.0
+seaborn==0.12.2
+streamlit==1.20.0
+urlextract==1.8.0
+wordcloud==1.9.1.1
+
